test/parallel/begin/deitz/test_begin_error_lineno.good
test_begin_error_lineno.chpl:10: error: halt reached - a thread is out of control
