test/parallel/begin/deitz/test_begin_error_lineno.chpl
use Time;

var x: int = 0;

begin {
  while true do
    x += 1;
}

sleep(1); halt("a thread is out of control");
